[gd_scene load_steps=9 format=2]

[ext_resource path="res://media/white.png" type="Texture" id=1]
[ext_resource path="res://scripts/Player.gd" type="Script" id=2]
[ext_resource path="res://media/light.png" type="Texture" id=3]
[ext_resource path="res://media/Bullet1.wav" type="AudioStream" id=4]
[ext_resource path="res://media/Bullet2.wav" type="AudioStream" id=5]
[ext_resource path="res://media/Killed.wav" type="AudioStream" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8, 8 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 9, 9 )

[node name="Player" type="KinematicBody2D"]
z_index = 1
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 2 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
zoom = Vector2( 0.6, 0.6 )
smoothing_enabled = true

[node name="Light2D" type="Light2D" parent="."]
z_index = 1
texture = ExtResource( 3 )
texture_scale = 0.25
shadow_enabled = true

[node name="Shoot1" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="Shoot2" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[node name="Killed" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[connection signal="body_entered" from="Area2D" to="." method="_on_player_body_entered"]
